<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_shadow_end_color"
    android:orientation="horizontal"
    android:padding="16dp"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/title"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/eventTitile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Event 1 aaaaaaaa"
                android:textColor="#000"
                android:textSize="15sp"
                android:visibility="visible"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dates"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/eventDates"
                android:textColor="#000"
                android:textSize="10sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/eventStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="2019-10-10"
                android:textColor="#000"
                android:textSize="10sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/eventEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="2019-12-10"
                android:textColor="#000"
                android:textSize="10sp"
                android:visibility="visible"
                tools:visibility="visible" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/tickets"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/available_tickets_count"
                android:textColor="#000"
                android:textSize="10sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/availableTickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="20"
                android:textColor="#000"
                android:textSize="10sp"
                android:visibility="visible"
                tools:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>